# practices

./: README.md
CSS_HTML/: README.md
CSS_HTML/Chapter_01/01_Example/: 01_Example.html
CSS_HTML/Chapter_01/02_StarBuzzCoffee/: index.html
CSS_HTML/Chapter_02/01_lounge/: elixir.html  lounge.html
CSS_HTML/Chapter_03/: index.html
CSS_HTML/Chapter_05/: index.html
CSS_HTML/Chapter_06/: index.html
CSS_HTML/Chapter_07/: index.html  style.css
CSS_HTML/Chapter_08/: index.html  style.css
CSS_HTML/Chapter_09/: lounge.css
CSS_HTML/Chapter_10/: lounge.css  lounge.html
CSS_HTML/Chapter_11/starbuzz/: index.html  starbuzz.css
CSS_HTML/Chapter_11/starbuzz_abs_positioning/: index.html  starbuzz.css
CSS_HTML/Chapter_11/starbuzz_table_positioning/: index.html  starbuzz.css
CSS_HTML/Chapter_12/: blog.html  index.html  starbuzz.css
CSS_HTML/Chapter_13/: journal.css  journal.html  table.html
CSS_HTML/Chapter_14/: form.html
JavaScript/: README.md
JavaScript/01_IntroductionToJavaScript/: 02_BasicEcamples.js
JavaScript/02_LexicalStructures/: 01_UnicodeEscapeSequence.js  02_UnicodeNormalization.js
JavaScript/03_Types_Values_Variables/: 03_2_0_Numbers.js  03_2_1_Integers.js  03_2_2_Floats.js  03_2_3_Arithmatics.js  03_2_4_BinaryFloatingPoint.js  03_2_5_BigInt.js  03_2_6_Dates.js  03_9_1_Conversion_And_Equality copy.js  03_9_2_ExplicitConversion.js  03_9_3_ObjectToPrimitiveConversion.js
JavaScript_beginner/Chapter_02/: Ex_02_FizBuzz.js  Ex_03_ChessBoard.js
JavaScript_beginner/Chapter_03/: Ex_01_Minimum.js  Ex_02_Recursion.js  Ex_03_CountChar.js  Ex_NumbersAddingMultiplyingBy5And3.js
JavaScript_beginner/Chapter_04/: Ex_01_SumOfRange.js  Ex_02_ReversingArray.js  Ex_03_List.js  Ex_04_DeepComparison.js
JavaScript_beginner/Chapter_05/: Ex_01_Flatenning.js  Ex_02_YourOwnLoop.js  Ex_03_Everything.js
JavaScript_beginner/Chapter_06/: Ex_01_Matrix.js  Ex_02_VectorType.js  Ex_03_Groups.js  Ex_04_IterableGroups.js  Ex_05_BorrowingAMethod.js
JavaScript_beginner/Chapter_07_Robot/: Robot.js
JavaScript_beginner/Chapter_08/: Ex_01_Retry.js  Ex_02_Box.js
JavaScript_beginner/Chapter_09/: Ex_01_RegexpGolf.js  Ex_02_QoutingStyle.js  Ex_03_NumberAgain.js
JavaScript_beginner/Chapter_14/: Ex_01_movingDot.html  Ex_02_BuildATable.html  Ex_03_GetElementByTagName.html  Ex_04_CatHat.html
Julia/: README.md
Julia/Julia 1.0 Programming Complete Reference Guide/Julia-1-Programming-Complete-Reference-Guide-master/Chapter01/: Untitled1.ipynb
Julia/Julia 1.0 Programming Complete Reference Guide/Practice/Chapter01/: Untitled.ipynb
Julia/Julia 1.0 Programming Complete Reference Guide/Practice/Chapter02/: Untitled.ipynb
Julia/Julia 1.0 Programming Complete Reference Guide/Practice/Chapter03/: Untitled.ipynb
Julia/Julia 1.0 Programming Complete Reference Guide/Practice/Chapter04/: Untitled.ipynb
Julia/Julia 1.0 Programming Complete Reference Guide/Practice/Chapter05/: Untitled.ipynb  words1.txt
Julia/Julia 1.0 Programming Complete Reference Guide/Practice/Chapter06/: TemperatureConverter.jl  Untitled.ipynb
Julia/Julia 1.0 Programming Complete Reference Guide/Practice/Chapter07/: Untitled.ipynb
Julia/Julia 1.0 Programming Complete Reference Guide/Practice/Chapter08/: RandomMatrix2.csv  Untitled.ipynb
Julia/Julia 1.0 Programming Complete Reference Guide/Practice/Chapter09/: Untitled.ipynb
Julia/Julia 1.0 Programming Complete Reference Guide/Practice/Chapter10/: Untitled.ipynb
Julia/Julia for Data Analysis/02_Getting_Started_With_julia/: 01_Representing values.ipynb  02_Defining variables.ipynb  03_Using the most important control-flow constructs.ipynb  04_Defining functions.ipynb  05_Understanding variable scoping rules.ipynb
Julia/Julia for Data Analysis/03_Julia’s support for scaling projects/: 01_Understanding Julia’s type system.ipynb  02_Using multiple dispatch in Julia.ipynb  03_Working with packages and modules.ipynb  04_Using macros.ipynb
Julia/Julia for Data Analysis/04_Working with collections in Julia/: 01_Working with arrays.ipynb  02_Mapping key-value pairs with dictionaries.ipynb  03_Structuring your data by using named tuples.ipynb
Julia/Julia_Bit_By_Bit/Practice/Chapter01/: Untitled.ipynb
Julia/manual/01_getting_started/: Untitled.ipynb
Qt/: README.md
Qt/QML_Beginner/05_Positioning_and_layouts/02_positioning_in_Z/: CMakeLists.txt  Shape.qml  main.qml
Qt/QML_Beginner/06_Properties_and_animations/04_Opacity_Animation/: CMakeLists.txt  main.qml  qml.qrc
Qt/QML_Beginner/07_Introducing_the_designer/04_Connection_And_Properties/: CMakeLists.txt  main.cpp  main.qml
Qt/QML_Beginner/07_Introducing_the_designer/05_check_box/: CMakeLists.txt  main.cpp  main.qml
Qt/QML_Beginner/07_Introducing_the_designer/05_states/: CMakeLists.txt  Object.qml  main.cpp  main.qml
Qt/QML_Beginner/08_Qt_Quick/02_labels/: CMakeLists.txt  main.cpp  main.qml
Qt/QML_Beginner/08_Qt_Quick/04_Button/: CMakeLists.txt  main.cpp  main.qml
Qt/QML_Beginner/08_Qt_Quick/07_comboBox/: CMakeLists.txt  main.cpp  main.qml
Qt/QML_Beginner/08_Qt_Quick/08_Delay_Button/: CMakeLists.txt  main.cpp  main.qml
Qt/QML_Beginner/08_Qt_Quick/09_DialBox/: CMakeLists.txt  main.cpp  main.qml
Qt/QML_Beginner/08_Qt_Quick/12_Slider/: CMakeLists.txt  main.cpp  main.qml
Qt/QML_Beginner/08_Qt_Quick/17_Tumbler/: CMakeLists.txt  main.cpp  main.qml
Qt/QML_Beginner/08_Qt_Quick/18_SimpleLogin/: CMakeLists.txt  main.cpp  main.qml
Qt/QML_Beginner/09_Templates/03_PassingVariables/: CMakeLists.txt  Page2.qml  main.cpp  main.qml
Qt/QML_Beginner/10_JavaScript/: 07_functions.js
Qt/QML_Beginner/10_JavaScript/08_JavaScript_In_QML/: CMakeLists.txt  main.cpp  main.qml
Qt/QtCore_Beginner/08_Classes/02_Constructors_Deconstructers/: CMakeLists.txt  laptop.cpp  laptop.h  main.cpp
Qt/QtCore_Beginner/08_Classes/05_Overriding/: CMakeLists.txt  feline.cpp  feline.h  lion.cpp  lion.h  main.cpp
Qt/QtCore_Beginner/11_signals_slots/05_Dog_Example/: CMakeLists.txt  dog.cpp  dog.h  main.cpp  owner.cpp  owner.h
Qt/QtCore_Beginner/15_Basic_Qt_Classed/06_QVariant/: CMakeLists.txt  main.cpp
(+1778 files in other folders)
